tests/ppx/write_prop.expected
Characters 45-48:
  fun (obj : int) -> obj##.p := 2
                     ^^^
Error: This expression has type int but an expression was expected of type
         < .. > Js.t
Characters 25-28:
  fun (obj : < > Js.t) -> obj##.p := 2
                          ^^^
Error: This expression has type <  > Js.t
       but an expression was expected of type
         < p : < set : 'a -> unit; .. > Js.gen_prop; .. > Js.t
       The first object type has no method p
Characters 52-55:
  fun (obj : < p : float Js.readonly_prop > Js.t) -> obj##.p := 1
                                                     ^^^
Error: This expression has type < p : float Js.readonly_prop > Js.t
       but an expression was expected of type
         < p : (< set : 'b -> unit; .. > as 'a) Js.gen_prop; .. > Js.t
       Type float Js.readonly_prop = < get : float > Js.gen_prop
       is not compatible with type 'a Js.gen_prop 
       The first object type has no method set
Characters 54-55:
  fun (obj : < p : float Js.prop > Js.t) -> obj##.p := 1
                                                       ^
Error: This expression has type int but an expression was expected of type
         float
Characters 41-55:
  fun (obj : < p : int Js.prop > Js.t) -> (obj##.p := 1) + 1
                                          ^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         int

